debian-installer (20040327) UNRELEASED; urgency=low

  * Sven Luther
    - Added powerpc-builtin-initrd.sh script to build kernels with builtin
      initrd. Need to find the proper place to call it yet though.
  * Joey Hess
    - Some manifest fixups.
  * Colin Watson
    - Add manifest info for powerpc.

 -- Joey Hess <joeyh@debian.org>  Fri, 26 Mar 2004 19:41:57 -0500

debian-installer (20040326) unstable; urgency=low

  * Sven Luther
    - Disabled powerpc-small/floppy/boot and boot-ofonly until miboot makes it
      to the archive.
    - added missing kernel-only/powerpc pkg-list.
  * Joey Hess
    - Remove irda-modules from the i386 net-drivers floppy, which
      was over size. Closes: #240192
    - Turn off powerpc-small build until it is fixed.

 -- Joey Hess <joeyh@debian.org>  Thu, 25 Mar 2004 23:35:29 -0500

debian-installer (20040325) unstable; urgency=low

  * Sven Luther
    - Added support for multiple powerpc kernel flavours/subarches.
  * Jeremie Koenig
    - Added support for oldworld pmac booting.
      => Problem : doesn't build on 2.6 kernel systems.
      => Problem : miboot is not in the archive yet.
  * Steve Langasek
    - Fix the udeb list for alpha netboot, since we were conspicuously
      missing all of the nic modules (among other things).
    - Bump us to 2.4.25-1 on alpha, now that udebs are in the archive.
  * Colin Watson
    - Change comments in yaboot.conf files to say sarge, not woody.
  * Martin Michlmayr
    - Add a netboot image for mips/sb1-swarm-bn, the Broadcom MIPS
      development board "SWARM" (BCM91250A).
  * Joey Hess
    - Try to add manifest info for hppa.
  * Vincent Sanders
    - Add support for pkg-lists to have kernel module packages on selected 
      targets.
    - change ARM netboot target to use this functionality
    - add several more ARM configurations

 -- Joey Hess <joeyh@debian.org>  Thu, 25 Mar 2004 20:24:53 -0500

debian-installer (20040323) unstable; urgency=low

  * Thiemo Seufer