@@ -7,7 +7,9 @@ debian-installer (20040327) UNRELEASED; urgency=low
     - Some manifest fixups.
   * Colin Watson
     - Add manifest info for powerpc.
-
+  * Vincent Sanders
+    - Add boot.init to netwinder netboot target
+	
  -- Joey Hess <joeyh@debian.org>  Fri, 26 Mar 2004 19:41:57 -0500
 
 debian-installer (20040326) unstable; urgency=low
